--- a/wp-content/themes/fipradotcom/sass/layout/_hero-banner.scss
+++ b/wp-content/themes/fipradotcom/sass/layout/_hero-banner.scss
@@ -94,7 +94,7 @@
     .btn.primary {
       text-shadow:none;
       color:$color__fipra-blue;
-      background-color: white;
+      background: white;
     }
     .btn.secondary {
       color:white;
