--- a/wp-content/themes/fipradotcom/sass/layout/_footer.scss
+++ b/wp-content/themes/fipradotcom/sass/layout/_footer.scss
@@ -66,7 +66,7 @@
     &.primary {
       color:$color__fipra-blue-gray;
       text-shadow: none;
-      background-color:white;
+      background:white;
       &:hover { background-color:darken(white, 20%); }
     }
     &.secondary { border-color: white; background: none;
