--- a/wp-content/themes/fipradotcom/sass/layout/_page-banner.scss
+++ b/wp-content/themes/fipradotcom/sass/layout/_page-banner.scss
@@ -2,7 +2,7 @@
   @include clearfix;
   font-family: $font__sans;
   color:white;
-  @include media($media__medium) { @include border-top-radius(4px); }
+  @include media($media__large) { @include border-top-radius(4px); }
 
   background-position: center;
   background-repeat: no-repeat;
@@ -17,9 +17,9 @@
     @include row();
 
     padding:($v-rhythm * 2) em(40px);
-    @include media($media__small) { padding:($v-rhythm * 6) em(40px); }
-    @include media($media__large) { padding:($v-rhythm * 8) em(40px); }
-    @include media($media__xlarge) { padding:($v-rhythm * 10) em(40px); }
+    @include media($media__small) { padding:($v-rhythm * 6) em(20px); }
+    @include media($media__large) { padding:($v-rhythm * 8) em(20px); }
+    @include media($media__xlarge) { padding:($v-rhythm * 10) em(20px); }
 
 
     a {
@@ -57,7 +57,7 @@
         text-shadow:0px 1px 1px $color__fipra-light-gray;
       }
       .btn.primary {
-        text-shadow:0px 1px 3px lighten($color__fipra-blue, 10%);
+//        text-shadow:0px 1px 3px lighten($color__fipra-blue, 10%);
       }
       .btn.secondary {
         border:1px solid $color__fipra-blue;
