--- a/wp-content/themes/fipradotcom/sass/pages/_unit.scss
+++ b/wp-content/themes/fipradotcom/sass/pages/_unit.scss
@@ -1,77 +1,80 @@
-#page-banner-content {
+#page-banner {
   &.unit {
-    text-align: center;
-    h1 { @include font-size(30); }
-    .meta { font-style: italic; margin-bottom:$v-rhythm; }
-    img {
-      display: none;
-      width: 70px;
-      margin-bottom: $v-rhythm;
-    }
-
-    @include media($media__small) {
-      h1 { @include font-size(36); letter-spacing: -1px; }
-      img { display:inline-block; }
-    }
-
-    @include media($media__medium) {
-      text-align: left;
-      h1 { @include font-size(56); }
-    }
-
-    @include media($media__large) { padding:$v-rhythm * 18 em(40px) $v-rhythm * 2 !important; }
-
-    &.dark-text {
-      h1 { color: $color__fipra-blue !important; text-shadow:0px 1px 1px $color__fipra-light-gray !important; }
-      h2 { color: $color__fipra-blue; }
-      .meta { color:black; }
+    #page-banner-content {
+      text-align: center;
+      h1 { @include font-size(30); }
+      .meta { font-style: italic; margin-bottom:$v-rhythm; }
       img {
-        box-shadow:0 0 5px 2px rgba(black, 0.2);
+        display: none;
+        width: 70px;
+        margin-bottom: $v-rhythm;
       }
-      .btn.primary {
-        text-shadow:0px 1px 3px lighten($color__fipra-blue, 10%);
+
+      @include media($media__small) {
+        h1 { @include font-size(36); letter-spacing: -1px; }
+        img { display:inline-block; }
       }
-      .btn.secondary {
-        border:1px solid $color__fipra-blue;
-        color:$color__fipra-blue;
-        &:hover {
-          border:1px solid $color__fipra-blue-gray;
-          color:$color__fipra-blue-gray;
+
+      @include media($media__medium) {
+        text-align: left;
+        h1 { @include font-size(56); }
+      }
+
+      @include media($media__medium) { padding:$v-rhythm * 14 em(40px) $v-rhythm * 2 !important; }
+      @include media($media__large) { padding:$v-rhythm * 18 em(40px) $v-rhythm * 2 !important; }
+
+      &.dark-text {
+        h1 { color: $color__fipra-blue !important; text-shadow:0px 1px 1px $color__fipra-light-gray !important; }
+        h2 { color: $color__fipra-blue; }
+        .meta { color:black; }
+        img {
+          box-shadow:0 0 5px 2px rgba(black, 0.2);
+        }
+        .btn.primary {
+          text-shadow:0px 1px 3px lighten($color__fipra-blue, 10%);
+        }
+        .btn.secondary {
+          border:1px solid $color__fipra-blue;
+          color:$color__fipra-blue;
+          &:hover {
+            border:1px solid $color__fipra-blue-gray;
+            color:$color__fipra-blue-gray;
+          }
         }
       }
     }
   }
 }
 
-#secondary {
-  .sidebar-contact {
-    @include clearfix;
-    @include border-top-radius(4px);
-    @include border-bottom-radius(4px);
-    margin-bottom:$v-rhythm;
-    background-color: lighten($color__fipra-light-gray, 5%);
-    @include linear-gradient(lighten($color__fipra-light-gray, 6%) 40%, lighten($color__fipra-light-gray, 3%) 100%);
-
-    padding:$v-rhythm em(12px);
-
-    img {
-      @include media($media__medium) { max-width:100px; }
-    }
-  }
-
-  ul.country-list {
-    list-style-type: none;
-    font-family: $font__sans;
-    li {
-      display:block;
+  #secondary {
+    .sidebar-contact {
+      @include clearfix;
+      @include border-top-radius(4px);
+      @include border-bottom-radius(4px);
       margin-bottom:$v-rhythm;
-      .country-list-flag { width: em(24px); height:em(16px); margin-right:em(5px); }
+      background-color: lighten($color__fipra-light-gray, 5%);
+      @include linear-gradient(lighten($color__fipra-light-gray, 6%) 40%, lighten($color__fipra-light-gray, 3%) 100%);
 
-      a { display:block; padding:$v-rhythm / 4 em(12px); background-color: lighten($color__fipra-light-gray, 5%);
-        @include linear-gradient(lighten($color__fipra-light-gray, 6%) 40%, lighten($color__fipra-light-gray, 3%) 100%);
-        @include border-top-radius(4px); @include border-bottom-radius(4px);
-        &:hover { background-color: $color__fipra-light-gray; }
+      padding:$v-rhythm em(12px);
+
+      img {
+        @include media($media__medium) { max-width:100px; }
+      }
+    }
+
+    ul.country-list {
+      list-style-type: none;
+      font-family: $font__sans;
+      li {
+        display:block;
+        margin-bottom:$v-rhythm;
+        .country-list-flag { width: em(24px); height:em(16px); margin-right:em(5px); }
+
+        a { display:block; padding:$v-rhythm / 4 em(12px); background-color: lighten($color__fipra-light-gray, 5%);
+          @include linear-gradient(lighten($color__fipra-light-gray, 6%) 40%, lighten($color__fipra-light-gray, 3%) 100%);
+          @include border-top-radius(4px); @include border-bottom-radius(4px);
+          &:hover { background-color: $color__fipra-light-gray; }
+        }
       }
     }
   }
-}
