--- a/wp-content/themes/fipradotcom/sass/variables-site/_colors.scss
+++ b/wp-content/themes/fipradotcom/sass/variables-site/_colors.scss
@@ -5,6 +5,7 @@ $color__fipra-periwinkle: #ccd3e5;
 $color__fipra-violet: #6f5ce5;
 $color__fipra-turquoise: #14b1cc;
 $color__fipra-light-gray: #EBEAE8;
+$color__fipra-light-orange: #fce5c3;
 
 //Underscores colours
 $color__background-body: #fff;
