--- a/wp-content/themes/fipradotcom/sass/elements/_buttons.scss
+++ b/wp-content/themes/fipradotcom/sass/elements/_buttons.scss
@@ -19,9 +19,12 @@
     color: white;
     @include transition(all 0.2s);
     text-shadow:0px -1px 0px darken($color__fipra-blue, 30%);
+    @include transition(all 0.2s);
 //    border-bottom:2px solid darken($color__fipra-blue, 15%);
     &:hover {
-      @include linear-gradient(to top, $color__fipra-blue-gray 60%, darken($color__fipra-blue-gray, 10%) 100%);
+//      @include linear-gradient(to top, $color__fipra-blue-gray 60%, darken($color__fipra-blue-gray, 10%) 100%);
+      opacity:0.7;
+      color:white;
     }
   }
 
