--- a/wp-content/themes/fipradotcom/style.css
+++ b/wp-content/themes/fipradotcom/style.css
@@ -427,6 +427,8 @@ blockquote {
         font-size: 60px;
         font-size: 3.75rem;
         text-align: left; } }
+    blockquote .quotemark img {
+      width: 90%; }
   @media screen and (max-width: 769px)  {
     blockquote img {
       max-width: 70px; } }
@@ -596,11 +598,12 @@ table:not(.no-style) {
     color: white;
     -webkit-transition: all 0.2s;
     transition: all 0.2s;
-    text-shadow: 0px -1px 0px black; }
+    text-shadow: 0px -1px 0px black;
+    -webkit-transition: all 0.2s;
+    transition: all 0.2s; }
     .btn.primary:hover, .btn:link.primary:hover, .btn:visited.primary:hover {
-      background-color: #5F697F;
-      background-image: -webkit-linear-gradient(bottom, #5F697F 60%, #495162 100%);
-      background-image: linear-gradient(to top,#5F697F 60%, #495162 100%); }
+      opacity: 0.7;
+      color: white; }
   .btn.secondary, .btn:link.secondary, .btn:visited.secondary {
     background-color: rgba(255, 255, 255, 0);
     border: 1px solid #5F697F;
@@ -1185,7 +1188,13 @@ table:not(.no-style) {
     .showcase .row-of-4 .shift-3-col {
       margin-left: 76.76824%; } }
   .showcase .row-of-1, .showcase .row-of-2, .showcase .row-of-3, .showcase .row-of-4 {
-    margin-bottom: 2.25rem; }
+    margin-bottom: 1.5rem; }
+    .showcase .row-of-1::after, .showcase .row-of-2::after, .showcase .row-of-3::after, .showcase .row-of-4::after {
+      clear: both;
+      content: "";
+      display: table; }
+    .showcase .row-of-1:last-child, .showcase .row-of-2:last-child, .showcase .row-of-3:last-child, .showcase .row-of-4:last-child {
+      margin-bottom: 0; }
     .showcase .row-of-1 .showcase-block.full-width, .showcase .row-of-2 .showcase-block.full-width, .showcase .row-of-3 .showcase-block.full-width, .showcase .row-of-4 .showcase-block.full-width {
       float: left;
       display: block;
@@ -4181,8 +4190,8 @@ embed, iframe, object {
       line-height: 2.25rem; } }
 
 .profile-expertise-showcase .showcase-block {
-  -webkit-transition: all 0.5s;
-  transition: all 0.5s; }
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s; }
   .profile-expertise-showcase .showcase-block:hover {
     opacity: 0.7; }
 .profile-expertise-showcase h3 {
