--- a/wp-content/themes/fipradotcom/sass/variables-site/_colors.scss
+++ b/wp-content/themes/fipradotcom/sass/variables-site/_colors.scss
@@ -8,7 +8,7 @@ $color__fipra-light-gray: #EBEAE8;
 $color__fipra-light-orange: #fce5c3;
 
 //Underscores colours
-$color__background-body: #fff;
+$color__background-body: $color__fipra-light-gray;
 $color__background-screen: #f1f1f1;
 $color__background-hr: #ccc;
 $color__background-button: #e6e6e6;
