--- a/wp-content/themes/fipradotcom/sass/layout/_footer.scss
+++ b/wp-content/themes/fipradotcom/sass/layout/_footer.scss
@@ -5,6 +5,10 @@
   border-top:1px solid darken($color__fipra-light-gray, 25%);
   border-bottom:5px solid $color__fipra-blue-gray;
 
+  @include media($media__xlarge) {
+    margin-top:$v-rhythm * 2;
+  }
+
   #footer-global-network {
     text-align: center;
     font-family: $font__sans;
