--- a/wp-content/themes/fipradotcom/sass/typography/_headings.scss
+++ b/wp-content/themes/fipradotcom/sass/typography/_headings.scss
@@ -19,9 +19,9 @@ h3, h4 {
 h5, h6 { margin:0 0 $v-rhythm 0; }
 
 h1 {
-  font-weight: $font__bold;
-  @include font-size(22);
-  line-height: $v-rhythm * 2.5;
+  font-weight: $font__black;
+  @include font-size(28);
+  line-height: $v-rhythm * 3;
 
   @include media($media__medium) { @include font-size(42); line-height: $v-rhythm * 4; }
 
@@ -37,7 +37,7 @@ h1 {
 h2 {
   font-weight: $font__bold;
   color:$color__fipra-blue;
-  @include font-size(24);
+  @include font-size(20);
   line-height: $v-rhythm * 2.5;
 
   @include media($media__large) { font-weight: $font__light; @include font-size(32); line-height: $v-rhythm * 3; }
@@ -45,7 +45,7 @@ h2 {
   //  Style similar to H1 in .hero-banner and feature blocks
   &.feature {
     @include media($media__small) { @include font-size(28); line-height: $v-rhythm * 3; }
-    @include media($media__large) { font-weight: $font__light; @include font-size(38); line-height: $v-rhythm * 4; }
+    @include media($media__large) { font-weight: $font__normal; @include font-size(38); line-height: $v-rhythm * 4; }
   }
 }
 
@@ -69,6 +69,6 @@ h5 { @include font-size(16); font-weight: $font__black; text-transform: uppercas
 
 h6 { @include font-size(14); font-weight: $font__black; }
 
-h1, h2, h3, h4, h5, h6 { &.no-margin { margin:0; } }
+h1, h2, h3, h4, h5, h6 { &.no-margin { margin:0; } &.no-top-margin { margin-top:0; } }
 
 //  In hero-banner, h1 looks the same as H5, H2 is same as H1 but light font weight
