--- a/wp-content/themes/fipradotcom/sass/variables-site/_typography.scss
+++ b/wp-content/themes/fipradotcom/sass/variables-site/_typography.scss
@@ -4,8 +4,9 @@ $font__normal: 400;
 $font__bold: 700;
 $font__black: 900;
 
-$font__main: 'PT Serif', serif;
+$font__main: 'Lato', Arial, Helvetica, sans-serif;
 $font__sans: 'Lato', Arial, Helvetica, sans-serif;
+$font__serif: 'PT Serif', serif;
 $font__code: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
 $font__pre: "Courier 10 Pitch", Courier, monospace;
 $font__line-height-body: $v-rhythm * 2;
